fix alignment

--- a/styles/components/menu.css
+++ b/styles/components/menu.css
@@ -83,13 +83,15 @@
 
 .category__buttons{
   margin-bottom: 1em;
+  
 }
 
 
 .categories {
   display: flex;
   align-items: center;
-  justify-content: start;
+  justify-content: center;
+ 
   padding: 0;
   gap: .2em;
 }
@@ -121,3 +123,32 @@
   font-size: 4em;
   color: white;
 }
+
+
+/* xs */
+ @media (min-width: 475px) {
+
+
+ 
+ } 
+
+/* sm */
+/* @media (min-width: 640px) {} */
+
+/* md */
+ @media (min-width: 768px) {
+  .categories {
+   
+    justify-content: left;
+  
+  }
+ } 
+
+/* lg */
+/* @media (min-width: 1024px) {} */
+
+/* xl */
+/* @media (min-width: 1280px) {} */
+
+/* 2xl */
+/* @media (min-width: 1536px) {} */
